--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,13 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap');
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
-  font-family: inherit;
-
+  
 }
-
 html {
   /* This will make 1rem = 10px */
   font-size: 62.5%;
@@ -18,15 +17,12 @@ html body {
   box-sizing: border-box;
   font-size: 1.6rem;
   min-height: 100vh;
-  background-color: #09223d; /* "dark-blue" color from brand colors */
-  color: #d1deea; /* "white" color from brand colors */
+  width: 100%;
+  font-family: 'Rajdhani', sans-serif;
+  /* background-color: #09223d; "dark-blue" color from brand colors */
+  /* color: #d1deea; "white" color from brand colors */
 }
 
-#root {
-  min-height: 100vh;
-}
-.app{
-  /* background-color: #083256; */
-  background-color: #EBF8FF;
-  min-height: 73rem;
+#root ,.app{
+  height: 100vh;
 }
