--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -1,14 +1,15 @@
 .login {
   background-color: #40415a;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .login-content {
-  width:min(55rem,95%) ;
+  width: min(55rem, 95%);
 }
 .login-heading {
-  margin-top: 10rem;
   display: flex;
   justify-content: center;
 }
@@ -21,30 +22,22 @@
   margin-top: 4rem;
   background-color: white;
   display: flex;
-  padding: 1.5rem;
   border-radius: 1rem;
+  padding-left: 1.5rem;
+  justify-content: center;
+  align-items: center;
 }
 
-.email-div > input {
-  outline: none;
-  border: none;
-  margin-left: 1rem;
-  width: 100%;
-}
 .pass-div {
   margin-top: 4rem;
   background-color: white;
   display: flex;
-  padding: 1.5rem;
   border-radius: 1rem;
+  padding-left: 1.5rem;
+  justify-content: center;
+  align-items: center;
 }
 
-.pass-div > input {
-  outline: none;
-  border: none;
-  margin-left: 1rem;
-  width: 100%;
-}
 .icons {
   color: #babacc;
 }
@@ -68,4 +61,5 @@
 }
 .option-signup {
   margin-left: 0.5rem;
+  color: white;
 }
