--- a/client/src/pages/notes/notes.css
+++ b/client/src/pages/notes/notes.css
@@ -1,39 +1,20 @@
 .notes {
   margin-top: 2rem;
-  display: flex;
 }
 .h3-notes-upload-link {
-  /* display: flex; */
-  /* justify-content: center; */
-  /* text-align: center; */
   color: #40415a;
-}
-.search {
-  padding-top: 4rem;
-  flex: 0.2;
-  display: flex;
-  justify-content: flex-start;
-}
-
-.search > Input {
-  height: fit-content;
-  border: none;
-  border-bottom: 2px solid gray;
-  width: fit-content;
-  width: 80%;
-}
-
-.all-notes {
-  flex: 0.8;
-  border-left: 1px solid lightgray;
-  padding: 2rem;
+  margin: 2rem;
 }
 
 .note {
+  margin: 2rem;
   display: flex;
   align-items: flex-end;
   padding: 2rem;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  background: white;
+  border: 1px solid #e7e7e7;
+  filter: drop-shadow(0px 4px 4px #d7e6e8);
+  border-radius: 12px;
 }
 
 .notes-buy-btn {
